# job-bot

./: .gitignore  Dockerfile  FOLDERSTRUCTURE.md  docker-compose.yml  notion_test_httpx.py  notion_test_httpx_async.py  pyproject.toml  render-build.sh  streamlit_app.py  test_pdf_compile.py
app/: celery_app.py  main.py  routes.py  tasks.py
data/: CL_content.tex  debug-tailored.tex  main.aux  main.tex  main_CL.tex  resume-content.tex
data/tmp_debug_pdf/: CL_content.tex  main.aux  main.tex  resume-content-run.tex  resume-content.tex
services/: crawl4ai_service.py  duplicate_checker_service.py  job_processor_service.py  llm_cover_letter_service.py  llm_evaluation_service.py  llm_normalization_service.py  llm_resume_service.py  llm_resume_service_gpt5_test.py  notion_service.py  pdf_compilation_service.py  playwright_scraper_service.py  supabase_upload_service.py
